# Kinect_ASCII_Viewer

./: CMakeLists.txt  ascii_viewer.cpp  ascii_viewer.h  main.cpp
